--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,7 +1,8 @@
 @charset 'UTF-8';
 
 body {
-        font-family: 'Poppins', sans-serif;
+    background-image: url(../images/fundo\ card\ colorido.jpg);
+    font-family: 'Poppins', sans-serif;
 }
 
 main{
@@ -18,3 +19,4 @@ main{
     gap: 30px;
     padding: 30px 0px;
 }
+
